force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that control functionality of AvaTax for QuoteQuickly.</description>
    <label>AvaTax Salesforce Integration Setting</label>
</CustomObject>