force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/fields/AVA_SFCPQ__C_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__C_Sandbox__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The default account type is Production. This selection changes the account type from Production to Sandbox.</description>
    <inlineHelpText>The default account type is Production. This selection changes the account type from Production to Sandbox.</inlineHelpText>
    <label>Sandbox</label>
    <type>Checkbox</type>
</CustomField>