force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/fields/AVA_SFCPQ__D_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__D_CompanyCode__c</fullName>
    <description>All transactions will be posted to this company in AvaTax</description>
    <inlineHelpText>All transactions will be posted to this company in AvaTax</inlineHelpText>
    <label>Company Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>