force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/fields/AVA_SFCPQ__E_Street__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__E_Street__c</fullName>
    <description>Street portion of corporate address.</description>
    <inlineHelpText>Street portion of corporate address.</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>