force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/fields/AVA_SFCPQ__Enable_AvaTax_Logging__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Enable_AvaTax_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, application logs will be stored in the Salesforce AvaTax Log Custom Object.</description>
    <inlineHelpText>If selected, application logs will be stored in the Salesforce AvaTax Log Custom Object.</inlineHelpText>
    <label>Enable AvaTax Logging</label>
    <type>Checkbox</type>
</CustomField>