force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/fields/AVA_SFCPQ__K_EnableAddressValidation__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__K_EnableAddressValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable AvaTax Address Validation</description>
    <inlineHelpText>To enable the AvaTax Address Validation Service. Address Validation service is available for US and Canada only</inlineHelpText>
    <label>Validate Addresses</label>
    <type>Checkbox</type>
</CustomField>