force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/fields/AVA_SFCPQ__Local_Mapping_Available__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Local_Mapping_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Mapping Available</label>
    <type>Checkbox</type>
</CustomField>