force-app/main/default/objects/AVA_SFCPQ__AvaTaxQuoteQuicklySettings__c/fields/AVA_SFCPQ__Street_3__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Street_3__c</fullName>
    <label>Street 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>